--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,11 @@
 services:
   backend:
+    restart: always
     build:
       context: ./backend
+      target: production
     ports:
-      - "5001:8080"
+      - "5001:5001"
     depends_on:
       - mongodb
       - postgres
