--- a/infrastructure/config/prometheus.yml
+++ b/infrastructure/config/prometheus.yml
@@ -3,5 +3,6 @@ global:
 
 scrape_configs:
   - job_name: 'user-service'
+    metrics_path: /metrics
     static_configs:
-      - targets: ['host.docker.internal:8080']
+      - targets: ['user-service:5001']
