setup:backend/messages

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,24 @@ services:
       context: ./backend/user-service
       dockerfile: Dockerfile
     environment:
-      - PG_CONN=host=postgres port=5432 user=postgres password=postgrespw database=user_db
+      - PG_CONN=host=postgres port=5432 user=postgres password=postgrespw database=postgres
       - RABBIT_CONN=amqp://evaluatz-admin:KU6NqgMms6xAda3mVncu@localhost:5672/internal-services-vhost
     ports:
       - "5001:5001"
+    depends_on:
+      - postgres
+    networks:
+      - evaluatz-network
+
+  message-service:
+    build:
+      context: ./backend/message-service
+      dockerfile: Dockerfile
+    environment:
+      - PG_CONN=host=postgres port=5432 user=postgres password=postgrespw database=postgres
+      - RABBIT_CONN=amqp://evaluatz-admin:KU6NqgMms6xAda3mVncu@localhost:5672/internal-services-vhost
+    ports:
+      - "5002:5002"
     depends_on:
       - postgres
     networks:
