--- a/backend/user-service/manifests/flux-system/gotk-sync.yaml
+++ b/backend/user-service/manifests/flux-system/gotk-sync.yaml
@@ -11,7 +11,7 @@ spec:
     branch: main
   secretRef:
     name: flux-system
-  url: https://gitlab.com/gng1/evaluatz/user-service.git
+  url: https://github.com/gui-gng/jojuhu/user-service.git
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
