setup:docker-file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,84 +1,7 @@
-version: "3.8"
-
-services:
-  user-service:
-    build:
-      context: ./backend/user-service
-      dockerfile: Dockerfile
-    environment:
-      - PG_CONN=host=postgres port=5432 user=postgres password=postgrespw database=postgres
-      - RABBIT_CONN=amqp://evaluatz-admin:KU6NqgMms6xAda3mVncu@localhost:5672/internal-services-vhost
-    ports:
-      - "5001:5001"
-    depends_on:
-      - postgres
-    networks:
-      - evaluatz-network
-
-  message-service:
-    build:
-      context: ./backend/message-service
-      dockerfile: Dockerfile
-    environment:
-      - PG_CONN=host=postgres port=5432 user=postgres password=postgrespw database=postgres
-      - RABBIT_CONN=amqp://evaluatz-admin:KU6NqgMms6xAda3mVncu@localhost:5672/internal-services-vhost
-    ports:
-      - "5002:5002"
-    depends_on:
-      - postgres
-    networks:
-      - evaluatz-network
-
-  mongodb:
-    image: mongo:latest
-    ports:
-      - "27017:27017"
-    networks:
-      - evaluatz-network
-
-  rabbitmq:
-    image: "rabbitmq:3-management"
-    ports:
-      - "5672:5672"
-      - "15672:15672"
-    networks:
-      - evaluatz-network
-
-  postgres:
-    image: "postgres:latest"
-    ports:
-      - "5432:5432"
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgrespw
-      - POSTGRES_DB=user_db
-    networks:
-      - evaluatz-network
-
-  jaeger:
-    image: jaegertracing/all-in-one:latest
-    ports:
-      - "6831:6831/udp"
-      - "16686:16686"
-    networks:
-      - evaluatz-network
-
-  prometheus:
-    image: prom/prometheus:latest
-    volumes:
-      - ./infrastructure/config/prometheus.yml:/etc/prometheus/prometheus.yml
-    ports:
-      - "9090:9090"
-    networks:
-      - evaluatz-network
-
-  grafana:
-    image: grafana/grafana:latest
-    ports:
-      - "3000:3000"
-    networks:
-      - evaluatz-network
+include:
+  - ./backend/docker-compose.yml
+  - ./infrastructure/docker-compose.yml
 
 networks:
-  evaluatz-network:
+  network-jojuhu:
     driver: bridge
